--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -33,7 +33,7 @@
 <div class="container-fluid">
     <ol class="breadcrumb">
         <li><a href="@Url.Action("Index","Home")">Inicio</a></li>
-        <li class="active">Evento @ViewBag.evento.nombre</li>
+        <li class="active">Evento: @ViewBag.evento.nombre</li>
     </ol>
 </div>
 
@@ -140,8 +140,8 @@
                                             <select id="funcionHora" class="form-control">
                                                 @for (int i = 0; i < ViewBag.ListFunciones.Count; i++)
                                                 {
-                                                    string fecha = String.Format("{0:d}",ViewBag.ListFunciones[i].fecha);
-                                                    string hora = String.Format("{0:t}",ViewBag.ListFunciones[i].horaIni);
+                                                    string fecha = String.Format("{0:d}", ViewBag.ListFunciones[i].fecha);
+                                                    string hora = String.Format("{0:t}", ViewBag.ListFunciones[i].horaIni);
                                                     <option value="@ViewBag.ListFunciones[i].codFuncion"> @fecha - @hora</option>
                                                 }
                                             </select>
@@ -172,26 +172,34 @@
                                     </div>
                                     <div class="row form-group">
 
-                                        @using (Html.BeginForm("Entradas", "Evento", FormMethod.Post, new{ id="submitEntradas"}))
+                                        @using (Html.BeginForm("Entradas", "Evento", FormMethod.Post, new { id = "submitEntradas" }))
                                         {
 
                                             @Html.TextBoxFor(Model => Model.idZona, new { style = "display:none" })
                                             @Html.TextBoxFor(Model => Model.idFuncion, new { style = "display:none" })
                                             @Html.TextBoxFor(model => model.idEvento, new { style = "display:none" })
-                                            @Html.CheckBoxFor(model => model.tieneAsientos, new { id="formTieneEntradas", style = "display:none" })
-                                            @Html.TextBoxFor(model => model.cantEntradas, new { id="formCantEntradas" ,style = "display:none" })
+                                            @Html.CheckBoxFor(model => model.tieneAsientos, new { id = "formTieneEntradas", style = "display:none" })
+                                            @Html.TextBoxFor(model => model.cantEntradas, new { id = "formCantEntradas", style = "display:none" })
                                             <div id="asientosElegidos">
 
                                             </div>
-                                            
+
                                             <div class="col-md-6">
                                                 <button type="submit" name="boton" value="carrito" class="btn btn-success pull-right ">Agregar al carrito <span class="glyphicon glyphicon-shopping-cart"></span></button>
                                             </div>
                                             <div class="col-md-6">
-                                                @if (Request.IsAuthenticated)
+                                                @{
+                                            if (Request.IsAuthenticated)
+                                            {
+                                                CuentaUsuario usuario = Session["UsuarioLogueado"] as CuentaUsuario;
+                                                if (usuario.codPerfil != 2)
                                                 {
                                                     <button type="submit" name="boton" value="reservar" class="btn btn-primary pull-right">Reservar <span class="glyphicon glyphicon-save"></span></button>
                                                 }
+
+                                            }
+                                                }
+
                                             </div>
                                         }
                                     </div>
@@ -228,7 +236,7 @@
         }
 
 
-       
+
     </div>
 
     <!--LOS EVENTOS DESTACADOS-->
@@ -324,7 +332,7 @@
             var flagOcupado = false;
             for (var i = 1 ; i <= cantFilas ; i++)
                 for (var j = 1 ; j <= cantColumnas ; j++) {
-                    $('<div id="'+(i*10005+j)+'" class="ficha"></div>').appendTo('.filas:nth-child(' + i + ') .celdas:nth-child(' + j + ')');
+                    $('<div id="' + (i * 10005 + j) + '" class="ficha"></div>').appendTo('.filas:nth-child(' + i + ') .celdas:nth-child(' + j + ')');
                     if (i != Math.abs(arrFilas[recorrido]) || j != arrColumnas[recorrido]) {
                         $('.filas:nth-child(' + i + ') .celdas:nth-child(' + j + ') div').addClass("eliminado");
                     }
@@ -358,7 +366,7 @@
 
                     var ubi = parseInt($(this).attr('id'));
 
-                    delete asientosElegidos[""+ubi] ;
+                    delete asientosElegidos["" + ubi];
 
                 }
                 else {//lo ponemos
@@ -366,13 +374,13 @@
                     $("#numEntradas").val(parseInt($("#numEntradas").val()) + 1)
 
                     var ubi = parseInt($(this).attr('id'));
-                    asientosElegidos[ (""+ubi) ]=cntAsientos++;
+                    asientosElegidos[("" + ubi)] = cntAsientos++;
                 }
             }
         });
 
         function cambioAsientos() {
-            
+
             //cambia el aforo cuando se cambia la zona
             var indiceZT = parseInt($("#zonaTarifa").val());
             var indiceFH = parseInt($("#funcionHora").val());
@@ -411,12 +419,12 @@
                     $("#formTieneEntradas").val(listaAsientos[index].tieneAsientos);
                     $('<div><h3>Quedan ' + listaAsientos[index].totalLibres + ' asientos</h3> </div>').appendTo('#canvas');
 
-                    
+
                 }
                 else $("#numEntradas").prop('disabled', true);
                 $("#numEntradas").val(0);
 
-                
+
                 //$("#filas").val("");
                 //$("#columnas").val("");
             }
@@ -429,17 +437,17 @@
 
         $("#submitEntradas").submit(function () {
             $("#asientosElegidos").empty();
-            $("#formCantEntradas").val( $("#numEntradas").val() );
+            $("#formCantEntradas").val($("#numEntradas").val());
             //validar!!!
 
-            
+
 
             //PIER VALIDA PLZ
             // cantEntradas que no son naturales
-            
 
 
-            var i=0;
+
+            var i = 0;
             for (var k in asientosElegidos) {
 
                 var n = parseInt(k);
