--- a/WebApplication4/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index.cshtml
@@ -19,23 +19,23 @@
             <div class="col-md-12 ">
                 <div id="carousel-1" class="carousel slide" data-ride="carousel">
                     <!--indicadores primero-->
-                    <ol class="carousel-indicators" >
+                    <ol class="carousel-indicators">
                         @for (var i = 0; i < listaDestacados.Count; i++)
                         {
-                            <li data-target="#carousel-1" sstyle="max-height:100%; max-width:100%;" data-slide-to=@("" + i) class="active"></li>
+                            <li data-target="#carousel-1" style="max-height:100%; max-width:100%;" data-slide-to=@("" + i) class="active"></li>
                         }
-                        
+
                     </ol>
                     <!--Contenedor de los slide-->
                     <div class="carousel-inner" role="listbox">
-                        
+
 
                         @for (var i = 0; i < listaDestacados.Count; i++)
                         {
-                                    <div class="@((i == 0) ? "item active" : "item ")">
-                                        
-                                        <a href=@Url.Action("VerEvento", "Evento", new { id = listaDestacados[i].codigo })><img src=@listaDestacados[i].ImagenDestacado height="500" width="1200" class="img-responsive" alt=@listaDestacados[i].nombre></a>
-                                    </div>
+                            <div class="@((i == 0) ? "item active" : "item ")">
+
+                                <a href=@Url.Action("VerEvento", "Evento", new { id = listaDestacados[i].codigo })><img src=@listaDestacados[i].ImagenDestacado height="500" width="1200" class="img-responsive" alt=@listaDestacados[i].nombre></a>
+                            </div>
                         }
 
                     </div>
@@ -62,29 +62,29 @@
                         {
                             <div class="col-md-3 col-sm-6 col-xs-12">
                                 <div class="thumbnail">
-
-
-                                    <img  class="event" src="@evento.ImagenDestacado" alt="">
+                                    <a href=@Url.Action("VerEvento", "Evento", new { id = evento.codigo })>
+                                        <img class="event" src="@evento.ImagenDestacado" alt="">
+                                    </a>
                                     <div class="caption" style="text-align:center">
                                         @{
-                                            var func = from obj in db.Funcion
-                                                       where (obj.codEvento == evento.codigo && obj.estado.Contains("ACTIVO"))
-                                                       orderby obj.horaIni ascending
-                                                       select obj;
+                            var func = from obj in db.Funcion
+                                       where (obj.codEvento == evento.codigo && obj.estado.Contains("ACTIVO"))
+                                       orderby obj.horaIni ascending
+                                       select obj;
 
-                                            string fecha = "";
+                            string fecha = "";
 
-                                            if (func.Count() > 0)
-                                            {
+                            if (func.Count() > 0)
+                            {
 
-                                                var funcion = func.First();
-                                                fecha = funcion.horaIni.Value.ToString("dd/MM/yyyy hh:mm tt");
-                                            }
-                                            else
-                                            {
+                                var funcion = func.First();
+                                fecha = funcion.horaIni.Value.ToString("dd/MM/yyyy hh:mm tt");
+                            }
+                            else
+                            {
 
-                                                fecha = "Pronto";
-                                            }
+                                fecha = "Disponible el : " + String.Format("{0:d}", evento.fecha_inicio);
+                            }
 
 
                                         }
@@ -96,51 +96,51 @@
                                 </div>
                             </div>
 
-                                            }
-                       
-                
+                        }
+
+
 
                     </div>
 
-                   
-                   
+
+
                 </div>
 
 
-@{ 
+                @{
 
 
-    var fechaI = "";
-    var fechaF = "";
+                    var fechaI = "";
+                    var fechaF = "";
 
-    if (ViewBag.fech_ini != null)
-    {
-        fechaI = ViewBag.fech_ini.ToString("yyyy-MM-dd");
-
-
-    }
-    else
-    {
-        fechaI = ViewBag.fech_ini;
-
-    }
-
-    if (ViewBag.fech_fin != null)
-    {
-        fechaF = ViewBag.fech_fin.ToString("yyyy-MM-dd");
+                    if (ViewBag.fech_ini != null)
+                    {
+                        fechaI = ViewBag.fech_ini.ToString("yyyy-MM-dd");
 
 
-    }
-    else
-    {
-        fechaF = ViewBag.fech_fin;
+                    }
+                    else
+                    {
+                        fechaI = ViewBag.fech_ini;
 
-    }
+                    }
+
+                    if (ViewBag.fech_fin != null)
+                    {
+                        fechaF = ViewBag.fech_fin.ToString("yyyy-MM-dd");
+
+
+                    }
+                    else
+                    {
+                        fechaF = ViewBag.fech_fin;
+
+                    }
 
 
 
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, nombre = ViewBag.nombre, fech_ini = fechaI, fech_fin = fechaF, idCategoria = ViewBag.idCategoria, idSubCat = ViewBag.idSubCat, idRegion = ViewBag.idRegion }));
-}
+                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, nombre = ViewBag.nombre, fech_ini = fechaI, fech_fin = fechaF, idCategoria = ViewBag.idCategoria, idSubCat = ViewBag.idSubCat, idRegion = ViewBag.idRegion }));
+                }
 
             </div>
         </div>
@@ -150,7 +150,7 @@
 
 
         $(document).ready(function () {
-           
+
 
 
             if (!isNaN(@ViewBag.idCategoria)) {
@@ -189,13 +189,13 @@
             $("#adv-search").on('submit', function (e) {
 
                 e.preventDefault();
-           
+
 
                 var fechI = this['fech_ini'].value;
                 var fechF = this['fech_fin'].value;
 
                 /*Regla 1 para la validadcion de al menos un campo*/
-                if (fechI == '' && fechF == ''  && $("#idCategoria").val() == '' &&
+                if (fechI == '' && fechF == '' && $("#idCategoria").val() == '' &&
                     $("#idSubCat").val() == '' && $("#idRegion").val() == '') {
 
                     $("#alerta").append('<strong>Ingrese al menos un campo!</strong>').show();
@@ -208,14 +208,14 @@
                         valor.remove();
 
                     }
-               
+
                     $("#alerta").hide();
 
                 }
                 /*Regla 2 : Validacion para las fechas*/
                 if (fechF != '' && fechI != '') {
-                   
-               
+
+
                     if (new Date(fechF.replace(/(\d{4})-(\d{2})-(\d{2})/, "$2/$3/$1")) < new Date(fechI.replace(/(\d{4})-(\d{2})-(\d{2})/, "$2/$3/$1"))) {
 
                         $("#alerta").append('<strong>Fecha hasta no puede ser menor que fecha desde</strong>').show();
@@ -263,7 +263,7 @@
                 dataType: 'json',
                 success: function (data) {
                     if (isNaN(data.length)) return;
-                  
+
                     $.each(data, function (k, v) {
                         $("#" + idCombo).append("<option value='" + v.id + "'>" + v.nombre + "</option>");
                     });
@@ -277,16 +277,13 @@
 
 
         function busqueda() {
-
             $('#search').submit();
-
         }
 
-        function busquedaAdv(){
-
+        function busquedaAdv() {
             $('#adv-search').submit();
         }
-            
+
         function verEvento() {
             window.open("ver_evento.html", "_self");
         }
