--- a/WebApplication4/WebApplication4/Views/Evento/Comentarios.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Comentarios.cshtml
@@ -86,6 +86,18 @@
 
     </div>
 
+    <div id="content" width="200px" class="hidden">
+
+        <ul align="center" class="comm-opts">
+            <li class="opt-del-button" onclick="eliminar()">Delete</li>
+        </ul>
+
+
+    </div>
+
+
+
+
 </div>
 <script>
 
@@ -102,7 +114,118 @@
 
         $.call(cargarDatos('/Evento/GetComents', codEvento, usuario, contenido));
 
+
+        $(this).delegate(".block-comment","mouseover",function(){
+
+          
+            if(!($(".popover").length >0))
+                $(this).children(".set-opts-btn").show();
+            
+            
+
+        });
+
+
+        $(this).delegate(".block-comment","mouseout",function(){
+               
+            if(!($(".popover").length >0))
+                $(this).children(".set-opts-btn").hide();
+                
+                
+                
+                
+        });
+
+            
+       
+            
+        $(document).on('click', function(e){
+                
+            $('.my-popover').each(function(){
+                    
+
+
+
+
+                if (!$(this).is(e.target) && $(this).has(e.target).length ===0 && $('.popover').has(e.target).length === 0){
+                    $(this).popover().data('bs.popover').tip().remove();
+                    $(this).hide();
+                       
+                }
+                
+                    
+                    
+            });
+                
+                
+        });
+
+
+
+
+
+
+
     });
+
+
+    function clickSpan(){
+
+
+        var $elements = $('.my-popover');
+        $elements.each(function(){
+           
+            var $element = $(this);
+            
+            $element.popover({
+                html: true,
+                placement: 'bottom',
+                container: $('body'),
+                content: $('#content').html()
+                
+                
+                
+            });
+            
+            
+            $elements.on('shown.bs.popover',function(){
+                var popover = $elements.data('bs.popover');
+                if(typeof popover !== "undefined"){
+                    var $tip = popover.tip();
+                    zindex = $tip.css('z-index');
+                    
+                 
+                    
+                    
+                     
+                 
+                }
+            });
+
+
+        });}
+
+    
+    function eliminar(){
+        var codEvento = @comm.codEvento;
+        var usuario =$("#user_val").val();
+        var contenido = $("#comm-cont-txt").val();
+        var $span =  $('.set-opts-btn:visible');
+
+        var valor  =  $($span).parent().val();
+
+        $.post("/Evento/DelComment",
+            {cod : valor, codEvento: codEvento}, function success(data,texto,value){
+
+                $($span).popover().data('bs.popover').tip().remove();
+                $.call(cargarDatos('/Evento/GetComents', codEvento, usuario, contenido));
+
+
+            },"json"
+            );
+        
+        
+    }
 
 
 
@@ -231,9 +354,16 @@
                 var cont = 0;
                 $.each(data,function(k,v){
 
+        
+                    var options = {
+                        weekday: "long", year: "numeric", month: "short",
+                        day: "numeric", hour: "2-digit", minute: "2-digit"
+                    };
 
-
-                    var fecha = Date(parseInt( v.fecha.substr(6))).toString();
+  
+                    var date =  new Date(parseInt( v.fecha.substr(6)));
+                    var fecha  = date.toLocaleDateString("en-us",options);
+                    var contenido ="";
 
                     if(cont>4){
                         $(".list-block-comment").append("<li onclick='agregarDatos()' align='center' value="+ cont +" class='list-group-item view-more'><a>Ver mas comentarios</a></li>");
@@ -243,7 +373,15 @@
 
                     }
 
-                    $(".list-block-comment").append(" <li class='list-group-item block-comment'>"+
+                 
+                    if(v.flag == true){
+                         contenido =  "<span data-title=''  onclick ='clickSpan()' class=' glyphicon glyphicon-pencil set-opts-btn  my-popover'></span>";
+
+                    }
+                   
+
+                    $(".list-block-comment").append(" <li value="+ v.codigo +" class='list-group-item block-comment'>"+
+                        contenido + 
                         "<div class='block'>"+
                         "<div class='row comment-header'>"+
                         "<h4>"+ v.nombre + "</h4>"+
@@ -309,9 +447,15 @@
                 $(".view-more").remove();
                 $.each(data,function(k,v){
 
+                    var options = {
+                        weekday: "long", year: "numeric", month: "short",
+                        day: "numeric", hour: "2-digit", minute: "2-digit"
+                    };
 
-
-                    var fecha = Date(parseInt( v.fecha.substr(6))).toString();
+  
+                    var date =  new Date(parseInt( v.fecha.substr(6)));
+                    var fecha  = date.toLocaleDateString("en-us",options);
+                    var contenido ="";
 
                     if(cont>4){
 
@@ -323,7 +467,15 @@
 
                     }
 
-                    $(".list-block-comment").append(" <li class='list-group-item block-comment'>"+
+                       
+                    if(v.flag == true){
+                         contenido =  "<span data-title=''  onclick ='clickSpan()' class=' glyphicon glyphicon-pencil set-opts-btn  my-popover'></span>";
+
+                    }
+                   
+
+                    $(".list-block-comment").append(" <li value="+ v.codigo +" class='list-group-item block-comment'>"+
+                        contenido + 
                         "<div class='block'>"+
                         "<div class='row comment-header'>"+
                         "<h4>"+ v.nombre + "</h4>"+
@@ -377,14 +529,38 @@
 <style>
 
 
-        .set-opts-btn{
+       .set-opts-btn{
         float: right;
+        cursor: pointer;
+        display: none;
         
         
         
     }
 
 
+            .comm-opts{
+        list-style: none;
+        padding: 0;
+        margin: 1px 1px;
+    
+        
+    }
+    .popover-content{
+        
+        padding: 0;
+    }
+    
+    .comm-opts li{
+        
+        width:70px;
+        box-shadow: 0 0 1px 1px gray;
+        cursor: pointer;    
+        padding: 2px 2px;
+        color: black;
+    
+        
+    }
 
     .form-post {
         width: 100%;
