Registrar Cliente por el Vendedor - Completo

--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/RegistrarUsuarioVendedor.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/RegistrarUsuarioVendedor.cshtml
@@ -1,62 +1,167 @@
 ﻿@using WebApplication4.Models;
-@model RegistrarUsuarioVendedorModel
+@model WebApplication4.Models.RegisterCliVendViewModel
+
 @{
-    ViewBag.Title = "CambiarContrasena";
+    ViewBag.Title = "Registrar cliente";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container-fluid">
     <div class="col-md-5">
         <ol class="breadcrumb">
-            <li class="active">Registrar nuevo cliente</li>
+            <li>@Html.ActionLink("Inicio", "Index2", "Home")</li>
+            <li class="active">Registrarse</li>
         </ol>
     </div>
 </div>
-@using (Html.BeginForm("RegistrarUsuarioVendedor", "CuentaUsuario", FormMethod.Post))
+
+
+@using (Html.BeginForm())
 {
+    @Html.AntiForgeryToken()
     <div class="container">
         <div class="col-md-8">
+            @Html.ValidationSummary(true)
+            <h7 style="color:red">* Datos obligatorios</h7>
+            <h3>Datos de Ingreso</h3><br>
             <div class="row form-group">
-                @Html.LabelFor(c => c.Nombres, new { @class = "control-label col-md-3" })
-                <div class="col-md-8">
-                    @Html.TextBoxFor(c => c.Nombres, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(c => c.Nombres)
+                @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Email)
+                </div>
+
+            </div>
+            <br />
+            <h3>Datos Personales</h3><br>
+
+
+
+
+            <div class="row form-group">
+                @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.nombre)
                 </div>
             </div>
+
             <div class="row form-group">
-                @Html.LabelFor(c => c.Apellidos, new { @class = "control-label col-md-3" })
-                <div class="col-md-8">
-                    @Html.TextBoxFor(c => c.Apellidos, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(c => c.Apellidos)
-                </div>
-            </div>
-            <div class="row form-group">
-                @Html.LabelFor(c => c.Correo, new { @class = "control-label col-md-3" })
-                <div class="col-md-8">
-                    @Html.TextBoxFor(c => c.Correo, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(c => c.Correo)
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.TipoDoc, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.TipoDoc)
-                    @Html.ValidationMessageFor(model => model.TipoDoc)
-                </div>
-            </div>
-            <div class="row form-group">
-                @Html.LabelFor(c => c.Dni, new { @class = "control-label col-md-3" })
-                <div class="col-md-8">
-                    @Html.TextBoxFor(c => c.Dni, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(c => c.Dni)
+                @Html.LabelFor(model => model.apellido, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.apellido, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.apellido)
                 </div>
             </div>
 
 
-            <div class="row" style="text-align: center">
-                <button style="button" class="btn btn-primary">Aceptar </button>
-                <a href="@Url.Action("MiCuenta","CuentaUsuario")" class="btn btn-danger">Salir <span class="glyphicon glyphicon-log-out"></span> </a>
+
+            <div class="row form-group">
+                @Html.LabelFor(model => model.tipoDoc, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-3">
+                    @{
+    List<SelectListItem> listItems = new List<SelectListItem>();
+    listItems.Add(new SelectListItem
+    {
+        Text = "DNI",
+        Value = "1",
+    });
+    listItems.Add(new SelectListItem
+    {
+        Text = "Pasaporte",
+        Value = "2"
+    });
+                    }
+                    @Html.DropDownListFor(model => model.tipoDoc, listItems, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.tipoDoc)
+                </div>
+
+                @Html.LabelFor(model => model.codDoc, new { @class = "control-label col-md-1" })
+                <div class="col-md-3">
+                    @Html.EditorFor(model => model.codDoc, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.codDoc)
+                </div>
+            </div>
+
+            <div class="row form-group">
+                @Html.LabelFor(model => model.sexo, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @{
+    List<SelectListItem> listItemsS = new List<SelectListItem>();
+    listItemsS.Add(new SelectListItem
+    {
+        Text = "Masculino",
+        Value = "H",
+    });
+    listItemsS.Add(new SelectListItem
+    {
+        Text = "Femenino",
+        Value = "F"
+    });
+                    }
+                    @Html.DropDownListFor(model => model.sexo, listItemsS, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.sexo)
+                </div>
+            </div>
+
+            <div class="row form-group">
+                @Html.LabelFor(model => model.fechaNac, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.fechaNac, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.fechaNac)
+                </div>
+            </div>
+
+            <h3>Ubicación</h3><br>
+
+            <div class="row form-group">
+                @Html.LabelFor(model => model.direccion, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.direccion)
+                </div>
+            </div>
+
+            <div class="row form-group">
+                @Html.LabelFor(model => model.telefono, new { @class = "control-label col-md-4" })
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.telefono)
+                </div>
+            </div>
+
+            <div class="row form-group">
+                @Html.LabelFor(model => model.telMovil, new { @class = "control-label col-md-4" })
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.telMovil, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.telMovil)
+                </div>
+            </div>
+
+
+
+            <div class="row form-group">
+                <div class="col-md-offset-4 col-md-6">
+                    <button type="submit" class="btn btn-primary">
+                        Registrarme
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </button>
+                    <a href="@Url.Action("Index","Home")" class="btn btn-danger"> Salir <span class="glyphicon glyphicon-log-out"></span></a>
+                </div>
             </div>
         </div>
     </div>
+
+}
+
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
