--- a/WebApplication4/WebApplication4/Views/Error/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Error/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Error 404: NotFound</h2>
