--- a/WebApplication4/WebApplication4/Views/Empleado/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Empleado/Edit.cshtml
@@ -72,10 +72,35 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Editar" class="btn btn-primary" />
+        <div class="row form-inline">
+            <div class="control-label col-md-2">
+                <label>Tipo de Documento</label>
+            </div>
+            <div class="control-label col-md-2">
+                @if ((int)cuenta.tipoDoc == 1) { 
+                    <input type="text" value="DNI" class="form-control" aria-describedby="dolares" readonly="true">
+                }
+                else
+                {
+                    <input type="text" value="Pasaporte" class="form-control" aria-describedby="dolares" readonly="true">
+                }                
+                    
             </div>
         </div>
-    </div>
+        <br>
+        <div class="row form-inline">
+            <div class="control-label col-md-2">
+                <label>Codigo Documento</label>
+            </div> 
+            <div class="control-label col-md-2">
+                <input type="text" value="@cuenta.codDoc" class="form-control" aria-describedby="dolares" readonly="true">
+            </div>
+        </div>
+        <br>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Editar" class="btn btn-primary" />
+                </div>
+            </div>
+        </div>
 }
